--- a/makefile.common
+++ b/makefile.common
@@ -9,7 +9,7 @@ INCLUDEDIR :=
 LIBDIR := 
 
 STFLAGS = -c -g -mtune=cortex-m4 -mthumb -std=c99 -fdata-sections -mfloat-abi=soft -march=armv7-m -mthumb-interwork -mapcs-frame \
--DUSE_STDPERIPH_DRIVER -DSTM32F40XX -DSTM32F407xx $(INCLUDEDIR)
+-DUSE_STDPERIPH_DRIVER -DSTM32F40_41xxx -DSTM32F40XX -DSTM32F407xx $(INCLUDEDIR)
 
 ASFLAGS = -c -g -mcpu=cortex-m4 -mthumb-interwork -mthumb -mfloat-abi=soft
 
